parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statement
Rule 1     statement -> statement statement
Rule 2     statement -> type
Rule 3     statement -> assign
Rule 4     statement -> func_def BLOCK_END
Rule 5     statement -> condition_def BLOCK_END
Rule 6     statement -> bookmark
Rule 7     statement -> goto
Rule 8     function -> LPAREN ID RPAREN
Rule 9     function -> LPAREN ID assign RPAREN
Rule 10    function -> function targ
Rule 11    bookmark -> BOOKMARK ID
Rule 12    goto -> GOTO ID
Rule 13    func_def -> FUNCTION_DEF ID
Rule 14    func_def -> FUNCTION_DEF ID assign
Rule 15    func_def -> func_def statement
Rule 16    condition_def -> CONDITION_DEF type
Rule 17    condition_def -> condition_def statement
Rule 18    condition_def -> condition_def condition_def_else
Rule 19    condition_def_else -> condition_def_else statement
Rule 20    condition_def_else -> CONDITION_ELSE
Rule 21    assign -> ID ASSIGN type
Rule 22    assign -> assign assign
Rule 23    targ -> targ targ
Rule 24    targ -> TABARGU
Rule 25    type -> type PLUS type
Rule 26    type -> type MINUS type
Rule 27    type -> type TIMES type
Rule 28    type -> type DIVIDE type
Rule 29    type -> type GREATERTHEN type
Rule 30    type -> type GREATERTHENEQUAL type
Rule 31    type -> type LESSTHEN type
Rule 32    type -> type LESSTHENEQUAL type
Rule 33    type -> type NEGATION type
Rule 34    type -> type EQUAL type
Rule 35    type -> OLPAREN type ORPAREN
Rule 36    type -> function
Rule 37    type -> STRING
Rule 38    type -> NUMBER
Rule 39    type -> ID

Terminals, with rules where they appear

ASSIGN               : 21
BLOCK_END            : 4 5
BOOKMARK             : 11
CONDITION_DEF        : 16
CONDITION_ELSE       : 20
DIVIDE               : 28
EQUAL                : 34
FUNCTION_DEF         : 13 14
GOTO                 : 12
GREATERTHEN          : 29
GREATERTHENEQUAL     : 30
ID                   : 8 9 11 12 13 14 21 39
LESSTHEN             : 31
LESSTHENEQUAL        : 32
LPAREN               : 8 9
MINUS                : 26
NEGATION             : 33
NUMBER               : 38
OLPAREN              : 35
ORPAREN              : 35
PLUS                 : 25
RPAREN               : 8 9
STRING               : 37
TABARGU              : 24
TIMES                : 27
error                : 

Nonterminals, with rules where they appear

assign               : 3 9 14 22 22
bookmark             : 6
condition_def        : 5 17 18
condition_def_else   : 18 19
func_def             : 4 15
function             : 10 36
goto                 : 7
statement            : 1 1 15 17 19 0
targ                 : 10 23 23
type                 : 2 16 21 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . statement statement
    (2) statement -> . type
    (3) statement -> . assign
    (4) statement -> . func_def BLOCK_END
    (5) statement -> . condition_def BLOCK_END
    (6) statement -> . bookmark
    (7) statement -> . goto
    (25) type -> . type PLUS type
    (26) type -> . type MINUS type
    (27) type -> . type TIMES type
    (28) type -> . type DIVIDE type
    (29) type -> . type GREATERTHEN type
    (30) type -> . type GREATERTHENEQUAL type
    (31) type -> . type LESSTHEN type
    (32) type -> . type LESSTHENEQUAL type
    (33) type -> . type NEGATION type
    (34) type -> . type EQUAL type
    (35) type -> . OLPAREN type ORPAREN
    (36) type -> . function
    (37) type -> . STRING
    (38) type -> . NUMBER
    (39) type -> . ID
    (21) assign -> . ID ASSIGN type
    (22) assign -> . assign assign
    (13) func_def -> . FUNCTION_DEF ID
    (14) func_def -> . FUNCTION_DEF ID assign
    (15) func_def -> . func_def statement
    (16) condition_def -> . CONDITION_DEF type
    (17) condition_def -> . condition_def statement
    (18) condition_def -> . condition_def condition_def_else
    (11) bookmark -> . BOOKMARK ID
    (12) goto -> . GOTO ID
    (8) function -> . LPAREN ID RPAREN
    (9) function -> . LPAREN ID assign RPAREN
    (10) function -> . function targ

    OLPAREN         shift and go to state 15
    STRING          shift and go to state 2
    NUMBER          shift and go to state 11
    ID              shift and go to state 13
    FUNCTION_DEF    shift and go to state 14
    CONDITION_DEF   shift and go to state 1
    BOOKMARK        shift and go to state 4
    GOTO            shift and go to state 8
    LPAREN          shift and go to state 12

    function                       shift and go to state 7
    goto                           shift and go to state 9
    func_def                       shift and go to state 10
    bookmark                       shift and go to state 3
    statement                      shift and go to state 5
    condition_def                  shift and go to state 16
    type                           shift and go to state 6
    assign                         shift and go to state 17

state 1

    (16) condition_def -> CONDITION_DEF . type
    (25) type -> . type PLUS type
    (26) type -> . type MINUS type
    (27) type -> . type TIMES type
    (28) type -> . type DIVIDE type
    (29) type -> . type GREATERTHEN type
    (30) type -> . type GREATERTHENEQUAL type
    (31) type -> . type LESSTHEN type
    (32) type -> . type LESSTHENEQUAL type
    (33) type -> . type NEGATION type
    (34) type -> . type EQUAL type
    (35) type -> . OLPAREN type ORPAREN
    (36) type -> . function
    (37) type -> . STRING
    (38) type -> . NUMBER
    (39) type -> . ID
    (8) function -> . LPAREN ID RPAREN
    (9) function -> . LPAREN ID assign RPAREN
    (10) function -> . function targ

    OLPAREN         shift and go to state 15
    STRING          shift and go to state 2
    NUMBER          shift and go to state 11
    ID              shift and go to state 19
    LPAREN          shift and go to state 12

    function                       shift and go to state 7
    type                           shift and go to state 18

state 2

    (37) type -> STRING .

    PLUS            reduce using rule 37 (type -> STRING .)
    MINUS           reduce using rule 37 (type -> STRING .)
    TIMES           reduce using rule 37 (type -> STRING .)
    DIVIDE          reduce using rule 37 (type -> STRING .)
    GREATERTHEN     reduce using rule 37 (type -> STRING .)
    GREATERTHENEQUAL reduce using rule 37 (type -> STRING .)
    LESSTHEN        reduce using rule 37 (type -> STRING .)
    LESSTHENEQUAL   reduce using rule 37 (type -> STRING .)
    NEGATION        reduce using rule 37 (type -> STRING .)
    EQUAL           reduce using rule 37 (type -> STRING .)
    OLPAREN         reduce using rule 37 (type -> STRING .)
    STRING          reduce using rule 37 (type -> STRING .)
    NUMBER          reduce using rule 37 (type -> STRING .)
    ID              reduce using rule 37 (type -> STRING .)
    FUNCTION_DEF    reduce using rule 37 (type -> STRING .)
    CONDITION_DEF   reduce using rule 37 (type -> STRING .)
    BOOKMARK        reduce using rule 37 (type -> STRING .)
    GOTO            reduce using rule 37 (type -> STRING .)
    LPAREN          reduce using rule 37 (type -> STRING .)
    $end            reduce using rule 37 (type -> STRING .)
    BLOCK_END       reduce using rule 37 (type -> STRING .)
    CONDITION_ELSE  reduce using rule 37 (type -> STRING .)
    ORPAREN         reduce using rule 37 (type -> STRING .)
    RPAREN          reduce using rule 37 (type -> STRING .)


state 3

    (6) statement -> bookmark .

    OLPAREN         reduce using rule 6 (statement -> bookmark .)
    STRING          reduce using rule 6 (statement -> bookmark .)
    NUMBER          reduce using rule 6 (statement -> bookmark .)
    ID              reduce using rule 6 (statement -> bookmark .)
    FUNCTION_DEF    reduce using rule 6 (statement -> bookmark .)
    CONDITION_DEF   reduce using rule 6 (statement -> bookmark .)
    BOOKMARK        reduce using rule 6 (statement -> bookmark .)
    GOTO            reduce using rule 6 (statement -> bookmark .)
    LPAREN          reduce using rule 6 (statement -> bookmark .)
    BLOCK_END       reduce using rule 6 (statement -> bookmark .)
    $end            reduce using rule 6 (statement -> bookmark .)
    CONDITION_ELSE  reduce using rule 6 (statement -> bookmark .)


state 4

    (11) bookmark -> BOOKMARK . ID

    ID              shift and go to state 20


state 5

    (0) S' -> statement .
    (1) statement -> statement . statement
    (1) statement -> . statement statement
    (2) statement -> . type
    (3) statement -> . assign
    (4) statement -> . func_def BLOCK_END
    (5) statement -> . condition_def BLOCK_END
    (6) statement -> . bookmark
    (7) statement -> . goto
    (25) type -> . type PLUS type
    (26) type -> . type MINUS type
    (27) type -> . type TIMES type
    (28) type -> . type DIVIDE type
    (29) type -> . type GREATERTHEN type
    (30) type -> . type GREATERTHENEQUAL type
    (31) type -> . type LESSTHEN type
    (32) type -> . type LESSTHENEQUAL type
    (33) type -> . type NEGATION type
    (34) type -> . type EQUAL type
    (35) type -> . OLPAREN type ORPAREN
    (36) type -> . function
    (37) type -> . STRING
    (38) type -> . NUMBER
    (39) type -> . ID
    (21) assign -> . ID ASSIGN type
    (22) assign -> . assign assign
    (13) func_def -> . FUNCTION_DEF ID
    (14) func_def -> . FUNCTION_DEF ID assign
    (15) func_def -> . func_def statement
    (16) condition_def -> . CONDITION_DEF type
    (17) condition_def -> . condition_def statement
    (18) condition_def -> . condition_def condition_def_else
    (11) bookmark -> . BOOKMARK ID
    (12) goto -> . GOTO ID
    (8) function -> . LPAREN ID RPAREN
    (9) function -> . LPAREN ID assign RPAREN
    (10) function -> . function targ

    OLPAREN         shift and go to state 15
    STRING          shift and go to state 2
    NUMBER          shift and go to state 11
    ID              shift and go to state 13
    FUNCTION_DEF    shift and go to state 14
    CONDITION_DEF   shift and go to state 1
    BOOKMARK        shift and go to state 4
    GOTO            shift and go to state 8
    LPAREN          shift and go to state 12

    function                       shift and go to state 7
    goto                           shift and go to state 9
    func_def                       shift and go to state 10
    bookmark                       shift and go to state 3
    statement                      shift and go to state 21
    condition_def                  shift and go to state 16
    type                           shift and go to state 6
    assign                         shift and go to state 17

state 6

    (2) statement -> type .
    (25) type -> type . PLUS type
    (26) type -> type . MINUS type
    (27) type -> type . TIMES type
    (28) type -> type . DIVIDE type
    (29) type -> type . GREATERTHEN type
    (30) type -> type . GREATERTHENEQUAL type
    (31) type -> type . LESSTHEN type
    (32) type -> type . LESSTHENEQUAL type
    (33) type -> type . NEGATION type
    (34) type -> type . EQUAL type

    OLPAREN         reduce using rule 2 (statement -> type .)
    STRING          reduce using rule 2 (statement -> type .)
    NUMBER          reduce using rule 2 (statement -> type .)
    ID              reduce using rule 2 (statement -> type .)
    FUNCTION_DEF    reduce using rule 2 (statement -> type .)
    CONDITION_DEF   reduce using rule 2 (statement -> type .)
    BOOKMARK        reduce using rule 2 (statement -> type .)
    GOTO            reduce using rule 2 (statement -> type .)
    LPAREN          reduce using rule 2 (statement -> type .)
    BLOCK_END       reduce using rule 2 (statement -> type .)
    $end            reduce using rule 2 (statement -> type .)
    CONDITION_ELSE  reduce using rule 2 (statement -> type .)
    PLUS            shift and go to state 28
    MINUS           shift and go to state 31
    TIMES           shift and go to state 26
    DIVIDE          shift and go to state 22
    GREATERTHEN     shift and go to state 29
    GREATERTHENEQUAL shift and go to state 27
    LESSTHEN        shift and go to state 25
    LESSTHENEQUAL   shift and go to state 30
    NEGATION        shift and go to state 24
    EQUAL           shift and go to state 23


state 7

    (36) type -> function .
    (10) function -> function . targ
    (23) targ -> . targ targ
    (24) targ -> . TABARGU

    PLUS            reduce using rule 36 (type -> function .)
    MINUS           reduce using rule 36 (type -> function .)
    TIMES           reduce using rule 36 (type -> function .)
    DIVIDE          reduce using rule 36 (type -> function .)
    GREATERTHEN     reduce using rule 36 (type -> function .)
    GREATERTHENEQUAL reduce using rule 36 (type -> function .)
    LESSTHEN        reduce using rule 36 (type -> function .)
    LESSTHENEQUAL   reduce using rule 36 (type -> function .)
    NEGATION        reduce using rule 36 (type -> function .)
    EQUAL           reduce using rule 36 (type -> function .)
    OLPAREN         reduce using rule 36 (type -> function .)
    STRING          reduce using rule 36 (type -> function .)
    NUMBER          reduce using rule 36 (type -> function .)
    ID              reduce using rule 36 (type -> function .)
    FUNCTION_DEF    reduce using rule 36 (type -> function .)
    CONDITION_DEF   reduce using rule 36 (type -> function .)
    BOOKMARK        reduce using rule 36 (type -> function .)
    GOTO            reduce using rule 36 (type -> function .)
    LPAREN          reduce using rule 36 (type -> function .)
    $end            reduce using rule 36 (type -> function .)
    BLOCK_END       reduce using rule 36 (type -> function .)
    CONDITION_ELSE  reduce using rule 36 (type -> function .)
    ORPAREN         reduce using rule 36 (type -> function .)
    RPAREN          reduce using rule 36 (type -> function .)
    TABARGU         shift and go to state 33

    targ                           shift and go to state 32

state 8

    (12) goto -> GOTO . ID

    ID              shift and go to state 34


state 9

    (7) statement -> goto .

    OLPAREN         reduce using rule 7 (statement -> goto .)
    STRING          reduce using rule 7 (statement -> goto .)
    NUMBER          reduce using rule 7 (statement -> goto .)
    ID              reduce using rule 7 (statement -> goto .)
    FUNCTION_DEF    reduce using rule 7 (statement -> goto .)
    CONDITION_DEF   reduce using rule 7 (statement -> goto .)
    BOOKMARK        reduce using rule 7 (statement -> goto .)
    GOTO            reduce using rule 7 (statement -> goto .)
    LPAREN          reduce using rule 7 (statement -> goto .)
    BLOCK_END       reduce using rule 7 (statement -> goto .)
    $end            reduce using rule 7 (statement -> goto .)
    CONDITION_ELSE  reduce using rule 7 (statement -> goto .)


state 10

    (4) statement -> func_def . BLOCK_END
    (15) func_def -> func_def . statement
    (1) statement -> . statement statement
    (2) statement -> . type
    (3) statement -> . assign
    (4) statement -> . func_def BLOCK_END
    (5) statement -> . condition_def BLOCK_END
    (6) statement -> . bookmark
    (7) statement -> . goto
    (25) type -> . type PLUS type
    (26) type -> . type MINUS type
    (27) type -> . type TIMES type
    (28) type -> . type DIVIDE type
    (29) type -> . type GREATERTHEN type
    (30) type -> . type GREATERTHENEQUAL type
    (31) type -> . type LESSTHEN type
    (32) type -> . type LESSTHENEQUAL type
    (33) type -> . type NEGATION type
    (34) type -> . type EQUAL type
    (35) type -> . OLPAREN type ORPAREN
    (36) type -> . function
    (37) type -> . STRING
    (38) type -> . NUMBER
    (39) type -> . ID
    (21) assign -> . ID ASSIGN type
    (22) assign -> . assign assign
    (13) func_def -> . FUNCTION_DEF ID
    (14) func_def -> . FUNCTION_DEF ID assign
    (15) func_def -> . func_def statement
    (16) condition_def -> . CONDITION_DEF type
    (17) condition_def -> . condition_def statement
    (18) condition_def -> . condition_def condition_def_else
    (11) bookmark -> . BOOKMARK ID
    (12) goto -> . GOTO ID
    (8) function -> . LPAREN ID RPAREN
    (9) function -> . LPAREN ID assign RPAREN
    (10) function -> . function targ

    BLOCK_END       shift and go to state 35
    OLPAREN         shift and go to state 15
    STRING          shift and go to state 2
    NUMBER          shift and go to state 11
    ID              shift and go to state 13
    FUNCTION_DEF    shift and go to state 14
    CONDITION_DEF   shift and go to state 1
    BOOKMARK        shift and go to state 4
    GOTO            shift and go to state 8
    LPAREN          shift and go to state 12

    function                       shift and go to state 7
    goto                           shift and go to state 9
    func_def                       shift and go to state 10
    bookmark                       shift and go to state 3
    statement                      shift and go to state 36
    condition_def                  shift and go to state 16
    type                           shift and go to state 6
    assign                         shift and go to state 17

state 11

    (38) type -> NUMBER .

    PLUS            reduce using rule 38 (type -> NUMBER .)
    MINUS           reduce using rule 38 (type -> NUMBER .)
    TIMES           reduce using rule 38 (type -> NUMBER .)
    DIVIDE          reduce using rule 38 (type -> NUMBER .)
    GREATERTHEN     reduce using rule 38 (type -> NUMBER .)
    GREATERTHENEQUAL reduce using rule 38 (type -> NUMBER .)
    LESSTHEN        reduce using rule 38 (type -> NUMBER .)
    LESSTHENEQUAL   reduce using rule 38 (type -> NUMBER .)
    NEGATION        reduce using rule 38 (type -> NUMBER .)
    EQUAL           reduce using rule 38 (type -> NUMBER .)
    OLPAREN         reduce using rule 38 (type -> NUMBER .)
    STRING          reduce using rule 38 (type -> NUMBER .)
    NUMBER          reduce using rule 38 (type -> NUMBER .)
    ID              reduce using rule 38 (type -> NUMBER .)
    FUNCTION_DEF    reduce using rule 38 (type -> NUMBER .)
    CONDITION_DEF   reduce using rule 38 (type -> NUMBER .)
    BOOKMARK        reduce using rule 38 (type -> NUMBER .)
    GOTO            reduce using rule 38 (type -> NUMBER .)
    LPAREN          reduce using rule 38 (type -> NUMBER .)
    $end            reduce using rule 38 (type -> NUMBER .)
    BLOCK_END       reduce using rule 38 (type -> NUMBER .)
    CONDITION_ELSE  reduce using rule 38 (type -> NUMBER .)
    ORPAREN         reduce using rule 38 (type -> NUMBER .)
    RPAREN          reduce using rule 38 (type -> NUMBER .)


state 12

    (8) function -> LPAREN . ID RPAREN
    (9) function -> LPAREN . ID assign RPAREN

    ID              shift and go to state 37


state 13

    (39) type -> ID .
    (21) assign -> ID . ASSIGN type

    PLUS            reduce using rule 39 (type -> ID .)
    MINUS           reduce using rule 39 (type -> ID .)
    TIMES           reduce using rule 39 (type -> ID .)
    DIVIDE          reduce using rule 39 (type -> ID .)
    GREATERTHEN     reduce using rule 39 (type -> ID .)
    GREATERTHENEQUAL reduce using rule 39 (type -> ID .)
    LESSTHEN        reduce using rule 39 (type -> ID .)
    LESSTHENEQUAL   reduce using rule 39 (type -> ID .)
    NEGATION        reduce using rule 39 (type -> ID .)
    EQUAL           reduce using rule 39 (type -> ID .)
    OLPAREN         reduce using rule 39 (type -> ID .)
    STRING          reduce using rule 39 (type -> ID .)
    NUMBER          reduce using rule 39 (type -> ID .)
    ID              reduce using rule 39 (type -> ID .)
    FUNCTION_DEF    reduce using rule 39 (type -> ID .)
    CONDITION_DEF   reduce using rule 39 (type -> ID .)
    BOOKMARK        reduce using rule 39 (type -> ID .)
    GOTO            reduce using rule 39 (type -> ID .)
    LPAREN          reduce using rule 39 (type -> ID .)
    BLOCK_END       reduce using rule 39 (type -> ID .)
    $end            reduce using rule 39 (type -> ID .)
    CONDITION_ELSE  reduce using rule 39 (type -> ID .)
    ASSIGN          shift and go to state 38


state 14

    (13) func_def -> FUNCTION_DEF . ID
    (14) func_def -> FUNCTION_DEF . ID assign

    ID              shift and go to state 39


state 15

    (35) type -> OLPAREN . type ORPAREN
    (25) type -> . type PLUS type
    (26) type -> . type MINUS type
    (27) type -> . type TIMES type
    (28) type -> . type DIVIDE type
    (29) type -> . type GREATERTHEN type
    (30) type -> . type GREATERTHENEQUAL type
    (31) type -> . type LESSTHEN type
    (32) type -> . type LESSTHENEQUAL type
    (33) type -> . type NEGATION type
    (34) type -> . type EQUAL type
    (35) type -> . OLPAREN type ORPAREN
    (36) type -> . function
    (37) type -> . STRING
    (38) type -> . NUMBER
    (39) type -> . ID
    (8) function -> . LPAREN ID RPAREN
    (9) function -> . LPAREN ID assign RPAREN
    (10) function -> . function targ

    OLPAREN         shift and go to state 15
    STRING          shift and go to state 2
    NUMBER          shift and go to state 11
    ID              shift and go to state 19
    LPAREN          shift and go to state 12

    function                       shift and go to state 7
    type                           shift and go to state 40

state 16

    (5) statement -> condition_def . BLOCK_END
    (17) condition_def -> condition_def . statement
    (18) condition_def -> condition_def . condition_def_else
    (1) statement -> . statement statement
    (2) statement -> . type
    (3) statement -> . assign
    (4) statement -> . func_def BLOCK_END
    (5) statement -> . condition_def BLOCK_END
    (6) statement -> . bookmark
    (7) statement -> . goto
    (19) condition_def_else -> . condition_def_else statement
    (20) condition_def_else -> . CONDITION_ELSE
    (25) type -> . type PLUS type
    (26) type -> . type MINUS type
    (27) type -> . type TIMES type
    (28) type -> . type DIVIDE type
    (29) type -> . type GREATERTHEN type
    (30) type -> . type GREATERTHENEQUAL type
    (31) type -> . type LESSTHEN type
    (32) type -> . type LESSTHENEQUAL type
    (33) type -> . type NEGATION type
    (34) type -> . type EQUAL type
    (35) type -> . OLPAREN type ORPAREN
    (36) type -> . function
    (37) type -> . STRING
    (38) type -> . NUMBER
    (39) type -> . ID
    (21) assign -> . ID ASSIGN type
    (22) assign -> . assign assign
    (13) func_def -> . FUNCTION_DEF ID
    (14) func_def -> . FUNCTION_DEF ID assign
    (15) func_def -> . func_def statement
    (16) condition_def -> . CONDITION_DEF type
    (17) condition_def -> . condition_def statement
    (18) condition_def -> . condition_def condition_def_else
    (11) bookmark -> . BOOKMARK ID
    (12) goto -> . GOTO ID
    (8) function -> . LPAREN ID RPAREN
    (9) function -> . LPAREN ID assign RPAREN
    (10) function -> . function targ

    BLOCK_END       shift and go to state 41
    CONDITION_ELSE  shift and go to state 42
    OLPAREN         shift and go to state 15
    STRING          shift and go to state 2
    NUMBER          shift and go to state 11
    ID              shift and go to state 13
    FUNCTION_DEF    shift and go to state 14
    CONDITION_DEF   shift and go to state 1
    BOOKMARK        shift and go to state 4
    GOTO            shift and go to state 8
    LPAREN          shift and go to state 12

    function                       shift and go to state 7
    goto                           shift and go to state 9
    func_def                       shift and go to state 10
    bookmark                       shift and go to state 3
    condition_def_else             shift and go to state 44
    statement                      shift and go to state 43
    condition_def                  shift and go to state 16
    type                           shift and go to state 6
    assign                         shift and go to state 17

state 17

    (3) statement -> assign .
    (22) assign -> assign . assign
    (21) assign -> . ID ASSIGN type
    (22) assign -> . assign assign

  ! shift/reduce conflict for ID resolved as shift
    OLPAREN         reduce using rule 3 (statement -> assign .)
    STRING          reduce using rule 3 (statement -> assign .)
    NUMBER          reduce using rule 3 (statement -> assign .)
    FUNCTION_DEF    reduce using rule 3 (statement -> assign .)
    CONDITION_DEF   reduce using rule 3 (statement -> assign .)
    BOOKMARK        reduce using rule 3 (statement -> assign .)
    GOTO            reduce using rule 3 (statement -> assign .)
    LPAREN          reduce using rule 3 (statement -> assign .)
    BLOCK_END       reduce using rule 3 (statement -> assign .)
    $end            reduce using rule 3 (statement -> assign .)
    CONDITION_ELSE  reduce using rule 3 (statement -> assign .)
    ID              shift and go to state 46

  ! ID              [ reduce using rule 3 (statement -> assign .) ]

    assign                         shift and go to state 45

state 18

    (16) condition_def -> CONDITION_DEF type .
    (25) type -> type . PLUS type
    (26) type -> type . MINUS type
    (27) type -> type . TIMES type
    (28) type -> type . DIVIDE type
    (29) type -> type . GREATERTHEN type
    (30) type -> type . GREATERTHENEQUAL type
    (31) type -> type . LESSTHEN type
    (32) type -> type . LESSTHENEQUAL type
    (33) type -> type . NEGATION type
    (34) type -> type . EQUAL type

    BLOCK_END       reduce using rule 16 (condition_def -> CONDITION_DEF type .)
    CONDITION_ELSE  reduce using rule 16 (condition_def -> CONDITION_DEF type .)
    OLPAREN         reduce using rule 16 (condition_def -> CONDITION_DEF type .)
    STRING          reduce using rule 16 (condition_def -> CONDITION_DEF type .)
    NUMBER          reduce using rule 16 (condition_def -> CONDITION_DEF type .)
    ID              reduce using rule 16 (condition_def -> CONDITION_DEF type .)
    FUNCTION_DEF    reduce using rule 16 (condition_def -> CONDITION_DEF type .)
    CONDITION_DEF   reduce using rule 16 (condition_def -> CONDITION_DEF type .)
    BOOKMARK        reduce using rule 16 (condition_def -> CONDITION_DEF type .)
    GOTO            reduce using rule 16 (condition_def -> CONDITION_DEF type .)
    LPAREN          reduce using rule 16 (condition_def -> CONDITION_DEF type .)
    PLUS            shift and go to state 28
    MINUS           shift and go to state 31
    TIMES           shift and go to state 26
    DIVIDE          shift and go to state 22
    GREATERTHEN     shift and go to state 29
    GREATERTHENEQUAL shift and go to state 27
    LESSTHEN        shift and go to state 25
    LESSTHENEQUAL   shift and go to state 30
    NEGATION        shift and go to state 24
    EQUAL           shift and go to state 23


state 19

    (39) type -> ID .

    PLUS            reduce using rule 39 (type -> ID .)
    MINUS           reduce using rule 39 (type -> ID .)
    TIMES           reduce using rule 39 (type -> ID .)
    DIVIDE          reduce using rule 39 (type -> ID .)
    GREATERTHEN     reduce using rule 39 (type -> ID .)
    GREATERTHENEQUAL reduce using rule 39 (type -> ID .)
    LESSTHEN        reduce using rule 39 (type -> ID .)
    LESSTHENEQUAL   reduce using rule 39 (type -> ID .)
    NEGATION        reduce using rule 39 (type -> ID .)
    EQUAL           reduce using rule 39 (type -> ID .)
    OLPAREN         reduce using rule 39 (type -> ID .)
    STRING          reduce using rule 39 (type -> ID .)
    NUMBER          reduce using rule 39 (type -> ID .)
    ID              reduce using rule 39 (type -> ID .)
    FUNCTION_DEF    reduce using rule 39 (type -> ID .)
    CONDITION_DEF   reduce using rule 39 (type -> ID .)
    BOOKMARK        reduce using rule 39 (type -> ID .)
    GOTO            reduce using rule 39 (type -> ID .)
    LPAREN          reduce using rule 39 (type -> ID .)
    $end            reduce using rule 39 (type -> ID .)
    BLOCK_END       reduce using rule 39 (type -> ID .)
    CONDITION_ELSE  reduce using rule 39 (type -> ID .)
    ORPAREN         reduce using rule 39 (type -> ID .)
    RPAREN          reduce using rule 39 (type -> ID .)


state 20

    (11) bookmark -> BOOKMARK ID .

    OLPAREN         reduce using rule 11 (bookmark -> BOOKMARK ID .)
    STRING          reduce using rule 11 (bookmark -> BOOKMARK ID .)
    NUMBER          reduce using rule 11 (bookmark -> BOOKMARK ID .)
    ID              reduce using rule 11 (bookmark -> BOOKMARK ID .)
    FUNCTION_DEF    reduce using rule 11 (bookmark -> BOOKMARK ID .)
    CONDITION_DEF   reduce using rule 11 (bookmark -> BOOKMARK ID .)
    BOOKMARK        reduce using rule 11 (bookmark -> BOOKMARK ID .)
    GOTO            reduce using rule 11 (bookmark -> BOOKMARK ID .)
    LPAREN          reduce using rule 11 (bookmark -> BOOKMARK ID .)
    $end            reduce using rule 11 (bookmark -> BOOKMARK ID .)
    BLOCK_END       reduce using rule 11 (bookmark -> BOOKMARK ID .)
    CONDITION_ELSE  reduce using rule 11 (bookmark -> BOOKMARK ID .)


state 21

    (1) statement -> statement statement .
    (1) statement -> statement . statement
    (1) statement -> . statement statement
    (2) statement -> . type
    (3) statement -> . assign
    (4) statement -> . func_def BLOCK_END
    (5) statement -> . condition_def BLOCK_END
    (6) statement -> . bookmark
    (7) statement -> . goto
    (25) type -> . type PLUS type
    (26) type -> . type MINUS type
    (27) type -> . type TIMES type
    (28) type -> . type DIVIDE type
    (29) type -> . type GREATERTHEN type
    (30) type -> . type GREATERTHENEQUAL type
    (31) type -> . type LESSTHEN type
    (32) type -> . type LESSTHENEQUAL type
    (33) type -> . type NEGATION type
    (34) type -> . type EQUAL type
    (35) type -> . OLPAREN type ORPAREN
    (36) type -> . function
    (37) type -> . STRING
    (38) type -> . NUMBER
    (39) type -> . ID
    (21) assign -> . ID ASSIGN type
    (22) assign -> . assign assign
    (13) func_def -> . FUNCTION_DEF ID
    (14) func_def -> . FUNCTION_DEF ID assign
    (15) func_def -> . func_def statement
    (16) condition_def -> . CONDITION_DEF type
    (17) condition_def -> . condition_def statement
    (18) condition_def -> . condition_def condition_def_else
    (11) bookmark -> . BOOKMARK ID
    (12) goto -> . GOTO ID
    (8) function -> . LPAREN ID RPAREN
    (9) function -> . LPAREN ID assign RPAREN
    (10) function -> . function targ

  ! shift/reduce conflict for OLPAREN resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for NUMBER resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for FUNCTION_DEF resolved as shift
  ! shift/reduce conflict for CONDITION_DEF resolved as shift
  ! shift/reduce conflict for BOOKMARK resolved as shift
  ! shift/reduce conflict for GOTO resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
    BLOCK_END       reduce using rule 1 (statement -> statement statement .)
    $end            reduce using rule 1 (statement -> statement statement .)
    CONDITION_ELSE  reduce using rule 1 (statement -> statement statement .)
    OLPAREN         shift and go to state 15
    STRING          shift and go to state 2
    NUMBER          shift and go to state 11
    ID              shift and go to state 13
    FUNCTION_DEF    shift and go to state 14
    CONDITION_DEF   shift and go to state 1
    BOOKMARK        shift and go to state 4
    GOTO            shift and go to state 8
    LPAREN          shift and go to state 12

  ! OLPAREN         [ reduce using rule 1 (statement -> statement statement .) ]
  ! STRING          [ reduce using rule 1 (statement -> statement statement .) ]
  ! NUMBER          [ reduce using rule 1 (statement -> statement statement .) ]
  ! ID              [ reduce using rule 1 (statement -> statement statement .) ]
  ! FUNCTION_DEF    [ reduce using rule 1 (statement -> statement statement .) ]
  ! CONDITION_DEF   [ reduce using rule 1 (statement -> statement statement .) ]
  ! BOOKMARK        [ reduce using rule 1 (statement -> statement statement .) ]
  ! GOTO            [ reduce using rule 1 (statement -> statement statement .) ]
  ! LPAREN          [ reduce using rule 1 (statement -> statement statement .) ]

    function                       shift and go to state 7
    goto                           shift and go to state 9
    func_def                       shift and go to state 10
    bookmark                       shift and go to state 3
    statement                      shift and go to state 21
    condition_def                  shift and go to state 16
    type                           shift and go to state 6
    assign                         shift and go to state 17

state 22

    (28) type -> type DIVIDE . type
    (25) type -> . type PLUS type
    (26) type -> . type MINUS type
    (27) type -> . type TIMES type
    (28) type -> . type DIVIDE type
    (29) type -> . type GREATERTHEN type
    (30) type -> . type GREATERTHENEQUAL type
    (31) type -> . type LESSTHEN type
    (32) type -> . type LESSTHENEQUAL type
    (33) type -> . type NEGATION type
    (34) type -> . type EQUAL type
    (35) type -> . OLPAREN type ORPAREN
    (36) type -> . function
    (37) type -> . STRING
    (38) type -> . NUMBER
    (39) type -> . ID
    (8) function -> . LPAREN ID RPAREN
    (9) function -> . LPAREN ID assign RPAREN
    (10) function -> . function targ

    OLPAREN         shift and go to state 15
    STRING          shift and go to state 2
    NUMBER          shift and go to state 11
    ID              shift and go to state 19
    LPAREN          shift and go to state 12

    function                       shift and go to state 7
    type                           shift and go to state 47

state 23

    (34) type -> type EQUAL . type
    (25) type -> . type PLUS type
    (26) type -> . type MINUS type
    (27) type -> . type TIMES type
    (28) type -> . type DIVIDE type
    (29) type -> . type GREATERTHEN type
    (30) type -> . type GREATERTHENEQUAL type
    (31) type -> . type LESSTHEN type
    (32) type -> . type LESSTHENEQUAL type
    (33) type -> . type NEGATION type
    (34) type -> . type EQUAL type
    (35) type -> . OLPAREN type ORPAREN
    (36) type -> . function
    (37) type -> . STRING
    (38) type -> . NUMBER
    (39) type -> . ID
    (8) function -> . LPAREN ID RPAREN
    (9) function -> . LPAREN ID assign RPAREN
    (10) function -> . function targ
